--- a/.verb.md
+++ b/.verb.md
@@ -1,15 +1,11 @@
-# {%= name %} {%= badge("fury") %}
+# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
 
 > {%= description %}
 
-## Install
 {%= include("install-npm", {save: true}) %}
 
-## Run tests
-
-```bash
-npm test
-```
+## Running tests
+{%= include("tests") %}
 
 ## Usage
 
