--- a/.verb.md
+++ b/.verb.md
@@ -6,7 +6,7 @@ var omitEmpty = require('{%= name %}');
 omitEmpty({a: 'a', b: ''});
 //=> {a: 'a'}
 
-omitEmpty({a: 'a', b: {c: 'c', d: ''});
+omitEmpty({a: 'a', b: {c: 'c', d: ''}});
 //=> {a: 'a', b: {c: 'c'}
 
 omitEmpty({a: ['a'], b: []});
