--- a/.verb.md
+++ b/.verb.md
@@ -1,21 +1,25 @@
+## Heads up!
+
+Breaking changes in v1.0.0! See the [Release History](#CHANGELOG.md).
+
 ## Usage
 
 ```js
-var omitEmpty = require('{%= name %}');
+const omitEmpty = require('{%= name %}');
 
-omitEmpty({a: 'a', b: ''});
-//=> {a: 'a'}
+console.log(omitEmpty({ a: 'a', b: '' }));
+//=> { a: 'a' }
 
-omitEmpty({a: 'a', b: {c: 'c', d: ''}});
-//=> {a: 'a', b: {c: 'c'}
+console.log(omitEmpty({ a: 'a', b: { c: 'c', d: '' } }));
+//=> { a: 'a', b: { c: 'c' } }
 
-omitEmpty({a: ['a'], b: []});
-//=> {a: ['a']}
+console.log(omitEmpty({ a: ['a'], b: [] }));
+//=> { a: ['a'] }
 
-omitEmpty({a: 0, b: 1});
-//=> {a: 0, b: 1}
+console.log(omitEmpty({ a: 0, b: 1 }));
+//=> { a: 0, b: 1 }
 
-// set the `noZero` flag
-omitEmpty({a: 0, b: 1}, true);
-//=> {b: 1}
+// set omitZero to true, to evaluate "0" as falsey
+console.log(omitEmpty({ a: 0, b: 1 }, { omitZero: true }));
+//=> { b: 1 }
 ```
